--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.megaObject{
+  display: flex;
+ margin: 52px;
+ justify-content: space-around;
+ 
+}
+
+.object{
+
+ max-width: 200px;
+
 }
 
 /* do not edit this footer */
