--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -2,6 +2,8 @@
 
 html, body {
   height: 100%;
+
+  
 }
 
 body {
@@ -20,6 +22,11 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  gap: 8px; 
+ 
+
 }
 
 .icon {
@@ -33,6 +40,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin-right: 16px;
+  
+
 }
 
 .close-button {
@@ -64,3 +75,27 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.align{
+  display: flex;
+  flex-direction: column;
+}
+.top{
+  display: flex;
+  justify-content: space-between;
+}
+
+.text{
+  margin-top: 8px;
+}
+
+.header{
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.buttonclass{
+  display: flex;
+  margin-top: 16px;
+}
+
