--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,73 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
-}
+  display: flex;
+  flex-direction: column;
+
+}  /* we display a flex and use column so all the containers are moveable in " vertical order"*/
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
-}
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: bold;
+  padding-left: 16px;
+}  /*pretty straight forward*/
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} /*easy*/
 
 .sidebar {
   width: 300px;
   background: royalblue;
-}
+  flex-shrink: 0;
+  padding: 16px;
+} /*we dont want the sidebar to shrink hence flex shrink and some padding */
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  width: 300px;
+  margin: 16px;
+
+  /*we set the card to a certain size 300px and we give it margin and padding for space inside and out*/
 }
+
+.body{
+  display: flex;
+  flex: 1;
+} /*this fills up the space between body and the footer */
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+
+}  /* this lets the container which holds cards to be able to wrap if there isnt enough space on screen*/
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+}  /*simple stuff you can look up (how to remove underline remove bullet points and color link*/
